--- a/style.css
+++ b/style.css
@@ -98,9 +98,9 @@ body {
 	position: absolute;
 	top: 2.8em; left: 2.8em;
 	width: 24em; height: 24em;
-	border: dashed 1px #ffc107;
+	border: solid 2px #4CAF50;
+	opacity: .2;
 	border-radius: 50%;
-	opacity: .3;
 	pointer-events: none;
 	content: '';
 }
@@ -166,6 +166,14 @@ body {
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
+}
+
+.circle-container > .active {
+	background-color: #4CAF50;
+}
+
+.schedule > div {
+	max-width: 16%;
 }
 
 @media only screen and (max-width: 800px) {
