--- a/style.css
+++ b/style.css
@@ -34,7 +34,14 @@ p > img {
     margin-top: 20px;
 }
 
+.date h3,
+.date p {
+	text-align: center;
+}
 
+.date p {
+	color: #757575;
+}
 
 .round {
 	display: inline-block;
